objects/DMAPP__DM_Segmentation_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Importance to Us</fullName>
                    <default>true</default>
                    <label>Importance to Us</label>
                </value>
                <value>
                    <fullName>Importance to Customer</fullName>
                </value>
                <value>
                    <fullName>Importance to Them</fullName>
                </value>
                <value>
                    <fullName>Current Revenues</fullName>
                </value>
                <value>
                    <fullName>Future Revenues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Help__c</fullName>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>DMAPP__Plan_Type__c</referenceTo>
        <relationshipLabel>Segmentation Questions</relationshipLabel>
        <relationshipName>Segmentation_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Segmentation Question</label>
    <listViews>
        <fullName>DMAPP__Segmentation_Questions</fullName>
        <columns>DMAPP__Plan_Type__c</columns>
        <columns>DMAPP__Category__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>Segmentation Questions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>